--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,6 +74,7 @@
                 </div>
             </div>
         </div>
+        {# O card de Processos foi removido daqui #}
     </div>
 </div>
 {% endblock %}
